@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

' vehicle Repository !!!1
class VehicleRepository{
    +getVehicleRepository
    +registerVehicle
}

class CreateVehicleUI{

}

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getVehicleRepository()
}

class CreateVehicleController{
    +getVehicle

}

class FM{
    name
    email
    phone number
    identification document
}


class Vehicle{
    Brand
    Model
    Type
    Tare
    Gross Weight
    Current Km
    Register Date
    Acquisition Date
    Maintenance/Check-up
}

class Check-up{
    distance "km"
}

CreateVehicleUI --> CreateVehicleController
Repositories --> VehicleRepository
CreateVehicleController --> Repositories
VehicleRepository --> Vehicle
CreateVehicleController --> Vehicle
FM "1" -- "*" Vehicle : registers >
FM "1" -- "*" "Check-up" : registers >
Vehicle "1" -- "1" "Check-up" : needs >


@enduml